--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,13 @@ install:
 script:
   - git checkout cpanfile
   - make test
+after_script:
+  - pod2html --infile /lib/utils.pm --outfile=docs/utils.html
+deploy:
+    provider: pages
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN
+    keep_history: true
+    on:
+        branch: master
+
